# EASy68K

./: .gitignore  COMPILING.md  README.md
EASy68K_Helpv5.16.1/: BasicOperation.htm  contents.hhc  help.hhp
EASy68K_Helpv5.16.1/Directives/: simhalt.htm
EASyBINv2.5.0/: Form1u.cpp  Form1u.h  aboutS.cpp  aboutS.h  help.cpp  help.h
Edit68Kv5.16.1/: EDIT68K.cpp  Preview_dlg.h  asm.h  assembleS.cpp  assembleS.h  chksaveS.cpp  chksaveS.h  editorOptions.cpp  editorOptions.h  findDialogS.cpp  findDialogS.h  fontForm1.cpp  fontForm1.h  help.cpp  listS.cpp  listS.h  mainS.cpp  newhelpS.h  optionsS.cpp  optionsS.h  preview.h  replaceDialogS.cpp  replaceDialogS.h  textS.cpp  textS.h
Sim68Kv5.16.1/: BREAKPOINTSu.cpp  BREAKPOINTSu.h  CODE9.CPP  FullscreenOptions.cpp  FullscreenOptions.h  LogfileDialogu.cpp  LogfileDialogu.h  Memory1.cpp  Memory1.h  Net.cpp  Net.h  Optionsu.cpp  Optionsu.h  PROTO.H  SIM68Ku.cpp  SIM68Ku.h  Stack1.cpp  Stack1.h  aboutS.cpp  aboutS.h  findDialogS.cpp  findDialogS.h  hardwareu.cpp  hardwareu.h  help.cpp  help.h  logU.cpp  logU.h  simIOu.cpp  simIOu.h
wxEdit68K/: CMakeLists.txt  Toolchain-mingw32.cmake  win-build.sh
wxEdit68K/include/: App.h  AssemblerOptions.h  EditorOptions.h  Frame.h  MyAuiNotebook.h  MyRichTextCtrl.h  editor_gui_defs.h
wxEdit68K/pseudo/: dep.gv  mainS  textS
wxEdit68K/src/: App.cpp  AssemblerOptions.cpp  EditorOptions.cpp  Frame.cpp  MyAuiNotebook.cpp  MyRichTextCtrl.cpp  assembler_options.xrc  editor_options.xrc  resource.xrc
wxEdit68K/win-build/: CMakeCache.txt  Makefile  cmake_install.cmake
(+8 files in other folders)
